# Clarika

./: .gitignore  LICENSE
backend/: .dockerignore  Cargo.toml
backend/.sqlx/: query-023ee0b1677ac43d50f1dc8aa055dc653c159ae1f0160e396e2bea9587cc3850.json  query-2eddc9e839f43647d62b374a4d974d5d5730832e4c20b5071e6984c1cf6b1845.json  query-4c98511ff158bea80fe2ed188568e47a031ea5fb8564cc44622f603a52f54004.json  query-4cee78b17ff8d6f920273cc2c6f1b024b1e3e235e34622cb7db687ee87ca7c40.json  query-57d430e7620953788d06dbedc54d85455d2ef3ee942a593af375609b8af23fd6.json  query-62d64d146e7810ee1b76a0a8454d99a79445109caea607849a8fb72d3e779323.json  query-81d69c697afb4b5167ffe5bdf457373cc71245ef5b858031bc9a82f45381b22b.json  query-926a8bdeaa9f8a5fb75b8b03eb63329742f8a04a3b5db192342df7362abbcc97.json  query-98d6711601f91b3bcd535c6a53cae002ee251eff122e8b83a2202eb65cebcb1c.json  query-9a993c8d79c1cec63fa0aaf4da78be61baa8b1afb95c9a33241132b093e54ab5.json  query-a7fc0a17ebbc963e185c5ab1dc3acf11acae06c36f096825ea7e1bdb3e4c9ac3.json  query-b4a3b0ae9c157a5a6b7922189cfa08a41627c4cc8b8921632a0ecce482001ecd.json  query-cceab3012ef44a37aec90cf434513b05b050f514dd5f2259f5963214181020a8.json  query-d620059bbbb5d7dc4651ae23ab49f051f8264e2b16d4ae8e51b7547d88422697.json  query-ddc3ef949b0325b02572a4f05b8b64f42fcc8c29ca956eb98409088ba2f24861.json  query-ddfbd9883834552b203d25950a65e91357a90d1598d3c99810ea485a111d0d7c.json  query-e033d5b8d84b1cd201b51bf0962ce1cd782ff8b067396e09da93460497c66fea.json  query-ee06114c2c75ab055a8bd1244da18f78181b8deca7ca59d1512e7568c25d74af.json  (+1 more)
backend/src/: db.rs  main.rs
(+35 files in other folders)
