[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-files = "0.6.8"
actix-web = "4.11.0"
async-graphql = { version = "7.0.17", features = ["chrono"] }
async-graphql-actix-web = "7.0.17"
bcrypt = "0.17.1"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "10.0.0"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "uuid",
    "chrono",
    "macros",
], default-features = false }
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
